--- a/ui/dm-page.ui
+++ b/ui/dm-page.ui
@@ -16,8 +16,6 @@
         </child>
       </object>
       <packing>
-        <property name="expand">False</property>
-        <property name="fill">True</property>
         <property name="position">0</property>
       </packing>
     </child>
@@ -37,8 +35,7 @@
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="wrap-mode">word-char</property>
-                    <property name="left-margin">0</property>
-                    <property name="right-margin">0</property>
+                    <property name="hexpand">1</property>
                     <signal name="key_press_event" handler="text_view_key_press_cb"/>
                   </object>
                 </child>
@@ -46,7 +43,6 @@
             </child>
           </object>
           <packing>
-            <property name="expand">1</property>
           </packing>
         </child>
         <child>
@@ -70,8 +66,6 @@
         </child>
       </object>
       <packing>
-        <property name="expand">False</property>
-        <property name="fill">True</property>
         <property name="position">1</property>
       </packing>
     </child>
