--- a/ui/modify-filter-dialog.ui
+++ b/ui/modify-filter-dialog.ui
@@ -2,7 +2,6 @@
 <interface>
   <template class="ModifyFilterDialog" parent="GtkDialog">
     <property name="can-focus">False</property>
-    <property name="border-width">6</property>
     <property name="title" translatable="yes">Add New Filter</property>
     <property name="modal">true</property>
     <property name="type-hint">dialog</property>
@@ -27,9 +26,9 @@
     </child>
     <child internal-child="vbox">
       <object class="GtkBox">
-        <property name="visible">1</property>
         <property name="orientation">vertical</property>
         <property name="spacing">12</property>
+        <property name="margin">12</property>
         <child>
           <object class="GtkGrid" id="regex_grid">
             <property name="visible">1</property>
