--- a/ui/profile-page.ui
+++ b/ui/profile-page.ui
@@ -32,6 +32,7 @@
   </menu>
   <template class="ProfilePage" parent="ScrollWidget">
     <property name="can-focus">0</property>
+    <property name="hscrollbar-policy">never</property>
     <child>
       <object class="GtkBox">
         <property name="visible">1</property>
