--- a/ui/style.css
+++ b/ui/style.css
@@ -266,17 +266,21 @@ progressbar.horizontal.embedded-progress>trough>progress {
 row.tweet {
   background-color: #fff;
   border-bottom: solid 1px alpha (grey, 0.3);
-  padding: 12px;
-  margin: 0 12px 12px 12px;
+  padding: 1em;
+  margin: 0 1em 1em 1em;
   box-shadow: 0px 1px 2px #555;
 }
 
+row.tweet:first-child {
+  margin-top: 1em;
+}
+
 row.tweet avatar {
-  margin-right: 12px;
+  margin-right: 1em;
 }
 
 row.tweet textbutton {
-  margin-right: 6px;
+  margin-right: 0.5em;
 }
 
 list.tweets {
