--- a/ui/style.css
+++ b/ui/style.css
@@ -268,7 +268,11 @@ row.tweet {
   border-bottom: solid 1px alpha (grey, 0.3);
   padding: 1em;
   margin: 0 1em 1em 1em;
-  box-shadow: 0px 1px 2px #555;
+  box-shadow: 0px 1px 2px #888;
+}
+
+row.tweet:active {
+  box-shadow: inset 0px 1px 2px #888;
 }
 
 row.tweet:first-child {
@@ -279,10 +283,27 @@ row.tweet avatar {
   margin-right: 1em;
 }
 
+row.tweet>.rt-icon {
+  margin-right: 0.5em;
+}
+
+row.tweet>.rt-icon,
+row.tweet>.rt-label {
+  margin-top: 0.5em;
+}
+
+row.tweet>multimedia {
+  margin-top: 0.5em;
+}
+
 row.tweet textbutton {
   margin-right: 0.5em;
 }
 
+row.tweet>.header {
+  margin-bottom: 0.5em;
+}
+
 list.tweets {
-  background-color: #ddd;
+  background-color: #eee;
 }
