style: Remove tweet row box shadow in backdrop

--- a/ui/style.css
+++ b/ui/style.css
@@ -275,6 +275,10 @@ row.tweet {
               0 1px 2px rgba(0,0,0,0.24);
 }
 
+row.tweet:backdrop {
+  box-shadow: none;
+}
+
 row.tweet:active {
   box-shadow: inset 0px 1px 2px #888;
 }
